--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Typo</title>
+  <title>Typo - keyboard trainer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://typostorage.blob.core.windows.net/avatars/MicrosoftTeams-image (1).png">
@@ -21,6 +21,7 @@
 <body class="mat-typography">
   <app-root></app-root>
   
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
